# presidio-hardened-ikigov-assess

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRESIDIO-REQ.md  README.de.md  README.md  SECURITY-AUDIT.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  pytest.yml  reserve-iki-gov.yml
pypi-reserve/: README.md
pypi-reserve/iki-gov/: README.md  pyproject.toml
schemas/: eai-classification.v1.schema.json
src/presidio_ikigov_assess/: __init__.py  bundle.py  checklist.py  classification.py  classify.py  cli.py  euaiact.py  evidence.py  gates.py  i18n.py  iso.py  mcp_server.py  remote.py  renderer.py  sanitize.py  scoring.py  security.py  store.py  trend.py  wizard.py  workshop.py
src/presidio_ikigov_assess/content/: __init__.py  builtin.py  coverage.py  loader.py  pack.py  profile.py  profile_builtin.py
tests/: conftest.py  test_bundle.py  test_checklist.py  test_classify.py  test_cli.py  test_content.py  test_euaiact.py  test_evidence.py  test_gates.py  test_iso.py  test_mcp_server.py  test_remote.py  test_sanitize.py  test_scoring.py  test_security.py  test_store.py  test_trend.py  test_wizard.py  test_workshop.py
tests/fixtures/: medical_classification.json
