[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-ikigov-assess"
version = "0.8.0"
description = "IKI-Gov Assessment Tool — operationalises the Integrated KI-Governance Reference Model for AI use-case governance."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["ai-governance", "iki-gov", "compliance", "iso42001"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
audit = ["pip-audit>=2.6.0"]
# MCP server extra. The official `mcp` SDK requires Python 3.10+, so this extra
# is only installable on 3.10+; the core CLI remains 3.9-compatible.
mcp = ["mcp>=1.2.0; python_version >= '3.10'"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pip-audit>=2.6.0",
    "mcp>=1.2.0; python_version >= '3.10'",
]

[project.scripts]
iga = "presidio_ikigov_assess.cli:app"
iga-mcp = "presidio_ikigov_assess.mcp_server:main"

[project.urls]
Repository = "https://github.com/vstantch/presidio-hardened-ikigov-assess"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_ikigov_assess"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/presidio_ikigov_assess --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "UP045"]

[tool.coverage.run]
source = ["src"]
